# ai-llm-redteam-operator

./: .gitignore  README.md  __init__.py  cli.py  models.py  operator.py  playbook.py  pyproject.toml  render.py
ai_llm_redteam_operator/: __init__.py  agent.py  cli.py  models.py  operator.py  playbook.py
