[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-llm-redteam-operator"
version = "0.1.0"
description = "Scenario-packet generator for authorized AI/LLM red-team and detection engineering."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "NuClide Research" }]
keywords = ["security", "red-team", "llm", "ai", "detection-engineering"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/nuclide-research/ai-llm-redteam-operator"
Organization = "https://nuclide-research.com"

[project.scripts]
ai-llm-redteam-operator = "ai_llm_redteam_operator.cli:main"

[tool.setuptools]
packages = ["ai_llm_redteam_operator"]
